--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "leo-galleguillos/string",
     "license": "MIT",
     "require": {
-        "zendframework/zend-test": "^3.1"
+        "laminas/laminas-test": "^3.1"
     },
     "autoload": {
         "psr-4": {
