--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "leo-galleguillos/string",
+    "name": "monthly-basis/string",
     "license": "MIT",
     "require": {
         "laminas/laminas-test": "^3.1"
     },
     "autoload": {
         "psr-4": {
-            "LeoGalleguillos\\String\\": "src/",
-            "LeoGalleguillos\\StringTest\\": "test/"
+            "MonthlyBasis\\String\\": "src/",
+            "MonthlyBasis\\StringTest\\": "test/"
         }
     }
 }
